id de Publication movido a Publication. idsByPublication removido de RestReceptionist